saving formatting and object creation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
 <body>
     <!-- 
-        Theme: Doggies!
+        Theme: Doggies! - 
+        extra:Make a nice tile pattern of doggies for the background image. 
+        extra:Make a nice cover image for the jumbotron. 
+
         1. Build out html skeleton COMPLETE
         2. CSS/Bootstrap  Bootstrap COMPLETE CSS: In Progress
         Javascript:
