pushing what I have complete.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                        <!--Count and display amount of words guessed correctly here  -->
                     <div class="card-header">Wins:</div>
                         <div class="card-body">
-                                <p class="card-text">#</p>
+                                <p class="card-text">#  </p>
                             </div>
                     </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -66,7 +66,7 @@
                     <div class="card-header">Current Word:</div>
                     <div class="card-body" id="word">
                     <!-- Display correct amount of spaces for the next word in the array. Display correct letters in spaces for each word as correct letters are guessed.-->
-                        <p class="card-text">_ _ _ _ _ _</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
