--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
                     <div class="card-header">Current Word:</div>
                     <div class="card-body" id="word">
                     <!-- Display correct amount of spaces for the next word in the array. Display correct letters in spaces for each word as correct letters are guessed.-->
-                        <p class="card-text"></p>
+                        <p class="card-text">_ _ _ _ _ _</p>
                     </div>
                 </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
                     <!-- Countdown number of guesses made remaining from set number of guesses before game over. Don't count down on guesses for the same letter already made in the round.  -->
                         <div class="card-header">Number of Guesses Remaining:</div>
                         <div class="card-body">
-                                <p class="card-text" id="guessesRemaining">#</p>
+                                <p class="card-text" id="guessesRemaining">9</p>
                             </div>
                     </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
                     <!-- Display letters already guessed in the current round. Don't display guesses already made. -->
                     <div class="card-header">Letters already guessed:</div>
-                    <div class="card-body">
+                    <div class="card-body" id="lettersGuessed">
                         <p class="card-text">_ _ _ _ _ _</p>
                     </div>
                 </div>
