display user guesses in letters guessed section of game

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <!-- Display letters already guessed in the current round. Don't display guesses already made. -->
                     <div class="card-header">Letters already guessed:</div>
                     <div class="card-body" id="lettersGuessed">
-                        <p class="card-text">_ _ _ _ _ _</p>
+                        <p class="card-text">_ _ _ _</p>
                     </div>
                 </div>
             </div>
