cleaned up variable scope a little and added coding that now locates the user inputs in the word to guess and displays the letters in the spaces that they should occupy

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                        <!--Count and display amount of words guessed correctly here  -->
                     <div class="card-header">Wins:</div>
                         <div class="card-body">
-                                <p class="card-text">#  </p>
+                                <p class="card-text">#  </p> 
                             </div>
                     </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -80,7 +80,7 @@
                     <!-- Display letters already guessed in the current round. Don't display guesses already made. -->
                     <div class="card-header">Letters already guessed:</div>
                     <div class="card-body" id="lettersGuessed">
-                        <p class="card-text">_ _ _ _</p>
+                        <p class="card-text">_ _ _</p>
                     </div>
                 </div>
             </div>
