added winning phrases to the mix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <h1 class="display-4">H-A-N-G-M-A-N</h1>
                 <!-- incorporate some sort of css animation to make game feel more interactive and snazzy -->
-                <p class="lead">LET'S PLAY!</p>
+                <p class="lead">Let's play!</p>
             </div>
         </div>
     </header>
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-12">
                 <!-- h2 Array of phrases that pop up in response to correct answer for hangman -->
-                <h2 id="phrases">Something related to the answer</h2>
+                <h2 id="phrases">You've Got This!</h2>
             </div>
             <div class="col-md-6" id="winningPic">
                 <!-- Array of images that pop up in response to correct answer for hangman -->
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
                     <!-- Display letters already guessed in the current round. Don't display guesses already made. -->
-                    <div class="card-header">Letters already guessed:</div>
+                    <div class="card-header">Letters Already Guessed:</div>
                     <div class="card-body" id="lettersGuessed">
                         <p class="card-text">_ _ _</p>
                     </div>
