accidentally uncommented broken code in previous push which led to the program not working properly.Commented out the code in question again and it's working properly now.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">H-A-N-G-M-A-N</h1>
-                <!-- incorporate some sort of css animation to make game feel more interactive and snazzy -->
+                <!-- incorporate some sort of css animation to make game feel more interactive and snazzy ?-->
                 <p class="lead">Let's play!</p>
             </div>
         </div>
