fixed image links and pushing the winning images.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <!-- h2 Array of phrases that pop up in response to correct answer for hangman -->
                 <h2 id="phrases">You've Got This!</h2>
             </div>
-            <div class="col-md-6" id="winningPic">
+            <div class="col-md-6">
                 <!-- Array of images that pop up in response to correct answer for hangman -->
-                <img src="http://via.placeholder.com/200x200" class="img-fluid" alt="Responsive image">
-                <audio id="barking" src="assets/javascript/dogbarking.mp3"></audio>
+                <img id="winningPic" src="http://via.placeholder.com/200x200" class="img-fluid" alt="Responsive image">
+                <audio id="barking" src="../javascript/dogbarking.mp3"></audio>
 
             </div>
             <div class="col-md-6">
